# TechConnect

./: .replit  DOCUMENTATION.md  README.md  auth.py  config.py  crud.py  database.py  email_service.py  logger.py  main.py  models.py  programmers_union.db  pyproject.toml  replit.md  requirements.txt
.local/state/replit/agent/filesystem/: filesystem_state.json
languages/: ar.json  en.json
static/css/: rtl.css  style.css
static/js/: admin.js  main.js
templates/: about.html  base.html  contact.html  index.html  portfolio.html  services.html
templates/admin/: dashboard.html  login.html
